# QT-Spotify

./: AudioInfo.cpp  AudioInfo.h  AudioInfoiBox.qml  CMakeLists.txt  ImageButton.qml  Main.qml  PlayerController.cpp  PlayerController.h  main.cpp  textButton.qml
